--- a/experiment1.ipynb
+++ b/experiment1.ipynb
@@ -27,41 +27,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the data\n",
     "microdados_2021 = pd.read_csv(datapaths[\"2021\"], encoding=\"ISO-8859-1\", delimiter=\";\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Columns we are interested in\n",
+    "columns_of_interest = [\n",
+    "    \"TP_PRESENCA_CN\", # \"Presença na prova objetiva de Ciências da Natureza\"\n",
+    "    \"TP_PRESENCA_CH\", # \"Presença na prova objetiva de Ciências Humanas\"\n",
+    "    \"TP_PRESENCA_LC\", # \"Presença na prova objetiva de Linguagens e Códigos\"\n",
+    "    \"TP_PRESENCA_MT\", # \"Presença na prova objetiva de Matemática\"\n",
+    "    \"CO_PROVA_CN\", # \"Código do tipo de prova de Ciências da Natureza\"\n",
+    "    \"CO_PROVA_CH\", # \"Código do tipo de prova de Ciências Humanas\"\n",
+    "    \"CO_PROVA_LC\", # \"Código do tipo de prova de Linguagens e Códigos\"\n",
+    "    \"CO_PROVA_MT\", # \"Código do tipo de prova de Matemática\"\n",
+    "    \"NU_NOTA_CN\", # \"Nota da prova de Ciências da Natureza\"\n",
+    "    \"NU_NOTA_CH\", # \"Nota da prova de Ciências Humanas\"\n",
+    "    \"NU_NOTA_LC\", # \"Nota da prova de Linguagens e Códigos\"\n",
+    "    \"NU_NOTA_MT\", # \"Nota da prova de Matemática\"\n",
+    "    \"NU_NOTA_REDACAO\" # \"Nota da prova de redação\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = microdados_2021[columns_of_interest]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        NU_INSCRICAO;NU_ANO;TP_FAIXA_ETARIA;TP_SEXO;TP_ESTADO_CIVIL;TP_COR_RACA;TP_NACIONALIDADE;TP_ST_CONCLUSAO;TP_ANO_CONCLUIU;TP_ESCOLA;TP_ENSINO;IN_TREINEIRO;CO_MUNICIPIO_ESC;NO_MUNICIPIO_ESC;CO_UF_ESC;SG_UF_ESC;TP_DEPENDENCIA_ADM_ESC;TP_LOCALIZACAO_ESC;TP_SIT_FUNC_ESC;CO_MUNICIPIO_PROVA;NO_MUNICIPIO_PROVA;CO_UF_PROVA;SG_UF_PROVA;TP_PRESENCA_CN;TP_PRESENCA_CH;TP_PRESENCA_LC;TP_PRESENCA_MT;CO_PROVA_CN;CO_PROVA_CH;CO_PROVA_LC;CO_PROVA_MT;NU_NOTA_CN;NU_NOTA_CH;NU_NOTA_LC;NU_NOTA_MT;TX_RESPOSTAS_CN;TX_RESPOSTAS_CH;TX_RESPOSTAS_LC;TX_RESPOSTAS_MT;TP_LINGUA;TX_GABARITO_CN;TX_GABARITO_CH;TX_GABARITO_LC;TX_GABARITO_MT;TP_STATUS_REDACAO;NU_NOTA_COMP1;NU_NOTA_COMP2;NU_NOTA_COMP3;NU_NOTA_COMP4;NU_NOTA_COMP5;NU_NOTA_REDACAO;Q001;Q002;Q003;Q004;Q005;Q006;Q007;Q008;Q009;Q010;Q011;Q012;Q013;Q014;Q015;Q016;Q017;Q018;Q019;Q020;Q021;Q022;Q023;Q024;Q025\n",
-      "0        210053865474;2021;5;F;1;1;1;1;3;1;;0;;;;;;;;31...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        \n",
-      "1        210052384164;2021;12;M;1;1;1;1;11;1;;0;;;;;;;;...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        \n",
-      "2        210052589243;2021;13;F;3;1;1;1;15;1;;0;;;;;;;;...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        \n",
-      "3        210052128335;2021;3;M;1;3;1;2;0;2;1;0;2304202;...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        \n",
-      "4        210051353021;2021;2;F;1;3;1;2;0;2;1;0;2311603;...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        \n",
-      "...                                                    ...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        \n",
-      "3389827  210053249138;2021;7;F;1;3;1;1;0;1;;0;;;;;;;;52...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        \n",
-      "3389828  210053776013;2021;7;F;1;1;1;1;5;1;;0;;;;;;;;41...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        \n",
-      "3389829  210052441508;2021;13;F;1;3;1;1;15;1;;0;;;;;;;;...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        \n",
-      "3389830  210051139675;2021;7;F;1;1;1;1;4;1;;0;;;;;;;;31...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        \n",
-      "3389831  210052410399;2021;12;F;2;3;1;1;15;1;;0;;;;;;;;...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        \n",
+      "   TP_PRESENCA_CN  TP_PRESENCA_CH  TP_PRESENCA_LC  TP_PRESENCA_MT   \n",
+      "0               0               1               1               0  \\\n",
+      "1               1               1               1               1   \n",
+      "2               0               0               0               0   \n",
+      "3               1               1               1               1   \n",
+      "4               1               1               1               1   \n",
       "\n",
-      "[3389832 rows x 1 columns]\n"
+      "   CO_PROVA_CN  CO_PROVA_CH  CO_PROVA_LC  CO_PROVA_MT  NU_NOTA_CN  NU_NOTA_CH   \n",
+      "0          NaN        881.0        892.0          NaN         NaN       574.6  \\\n",
+      "1        912.0        882.0        891.0        901.0       505.9       551.8   \n",
+      "2          NaN          NaN          NaN          NaN         NaN         NaN   \n",
+      "3        911.0        880.0        890.0        902.0       580.7       678.9   \n",
+      "4        912.0        882.0        891.0        901.0       497.7       532.4   \n",
+      "\n",
+      "   NU_NOTA_LC  NU_NOTA_MT  NU_NOTA_REDACAO  \n",
+      "0       472.6         NaN            760.0  \n",
+      "1       498.3       461.5            560.0  \n",
+      "2         NaN         NaN              NaN  \n",
+      "3       638.9       659.5            780.0  \n",
+      "4       457.6       582.6            780.0  \n"
      ]
     }
    ],
    "source": [
-    "print(microdados_2021)"
+    "print(df2.head())"
    ]
   },
   {
