--- a/experiment1.ipynb
+++ b/experiment1.ipynb
@@ -209,22 +209,67 @@
     "assert(len(prova_mt_azul) != 0)\n",
     "assert(len(prova_mt_amarela) != 0)\n",
     "assert(len(prova_mt_rosa) != 0)\n",
-    "assert(len(prova_mt_cinza) != 0)"
+    "assert(len(prova_mt_cinza) != 0)\n",
+    "\n",
+    "prova_cn = pd.concat(\n",
+    "    [prova_cn_azul.rename(\"Azul\").reset_index(drop=True),\n",
+    "     prova_cn_amarela.rename(\"Amarela\").reset_index(drop=True),\n",
+    "     prova_cn_cinza.rename(\"Cinza\").reset_index(drop=True),\n",
+    "     prova_cn_rosa.rename(\"Rosa\").reset_index(drop=True)], axis = 1)\n",
+    "\n",
+    "assert(len(prova_cn[\"Azul\"].dropna()) == len(prova_cn_azul))\n",
+    "assert(len(prova_cn[\"Amarela\"].dropna()) == len(prova_cn_amarela))\n",
+    "assert(len(prova_cn[\"Cinza\"].dropna()) == len(prova_cn_cinza))\n",
+    "assert(len(prova_cn[\"Rosa\"].dropna()) == len(prova_cn_rosa))\n",
+    "\n",
+    "prova_ch = pd.concat(\n",
+    "    [prova_ch_azul.rename(\"Azul\").reset_index(drop=True),\n",
+    "     prova_ch_amarela.rename(\"Amarela\").reset_index(drop=True),\n",
+    "     prova_ch_branca.rename(\"Branca\").reset_index(drop=True),\n",
+    "     prova_ch_rosa.rename(\"Rosa\").reset_index(drop=True)], axis = 1)\n",
+    "\n",
+    "assert(len(prova_ch[\"Azul\"].dropna()) == len(prova_ch_azul))\n",
+    "assert(len(prova_ch[\"Amarela\"].dropna()) == len(prova_ch_amarela))\n",
+    "assert(len(prova_ch[\"Branca\"].dropna()) == len(prova_ch_branca))\n",
+    "assert(len(prova_ch[\"Rosa\"].dropna()) == len(prova_ch_rosa))\n",
+    "\n",
+    "prova_lc = pd.concat(\n",
+    "    [prova_lc_azul.rename(\"Azul\").reset_index(drop=True),\n",
+    "     prova_lc_amarela.rename(\"Amarela\").reset_index(drop=True),\n",
+    "     prova_lc_rosa.rename(\"Rosa\").reset_index(drop=True),\n",
+    "     prova_lc_branca.rename(\"Branca\").reset_index(drop=True)], axis = 1)\n",
+    "\n",
+    "assert(len(prova_lc[\"Azul\"].dropna()) == len(prova_lc_azul))\n",
+    "assert(len(prova_lc[\"Amarela\"].dropna()) == len(prova_lc_amarela))\n",
+    "assert(len(prova_lc[\"Rosa\"].dropna()) == len(prova_lc_rosa))\n",
+    "assert(len(prova_lc[\"Branca\"].dropna()) == len(prova_lc_branca))\n",
+    "\n",
+    "prova_mt = pd.concat(\n",
+    "    [prova_mt_azul.rename(\"Azul\").reset_index(drop=True),\n",
+    "     prova_mt_amarela.rename(\"Amarela\").reset_index(drop=True),\n",
+    "     prova_mt_rosa.rename(\"Rosa\").reset_index(drop=True),\n",
+    "     prova_mt_cinza.rename(\"Cinza\").reset_index(drop=True)], axis = 1)\n",
+    "\n",
+    "assert(len(prova_mt[\"Azul\"].dropna()) == len(prova_mt_azul))\n",
+    "assert(len(prova_mt[\"Amarela\"].dropna()) == len(prova_mt_amarela))\n",
+    "assert(len(prova_mt[\"Rosa\"].dropna()) == len(prova_mt_rosa))\n",
+    "assert(len(prova_mt[\"Cinza\"].dropna()) == len(prova_mt_cinza))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "517658\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
